objects/Purchase_Order__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_PO__c</fullName>
        <label>Total PO</label>
        <summarizedField>PO_Detail__c.Cost__c</summarizedField>
        <summaryForeignKey>PO_Detail__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Purchase Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Order_Complete__c</columns>
        <columns>Priority__c</columns>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Total_PO__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PO-{000000}</displayFormat>
        <label>Purchase Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>